@@ -10,6 +10,7 @@ ufsutils (7.1-3) UNRELEASED; urgency=low
   * Switch to debhelper compatibility level 7.
   * Use dh_prep instead of “dh_clean -k”.
   * Do not use stamp files for build.
+  * Include quilt.make snippet instead of using ad-hoc code.
 
  -- Guillem Jover <guillem@debian.org>  Sat, 18 Apr 2009 01:47:10 +0200
 
